WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277401
[GTK4] editing/pasteboard/data-transfer-set-data-sanitize-url-when-copying-in-null-origin.html is a constant failure
https://bugs.webkit.org/show_bug.cgi?id=277401
Summary
[GTK4] editing/pasteboard/data-transfer-set-data-sanitize-url-when-copying-in...
Diego Pino
Reported
2024-07-31 00:29:17 PDT
According to results.webkit.org, this test is flaky in GTK3:
https://results.webkit.org/?platform=GTK&platform=WPE&suite=layout-tests&test=editing/pasteboard/data-transfer-set-data-sanitize-url-when-copying-in-null-origin.html
& But it's constantly failing in GTK4 with the following error:
https://build.webkit.org/results/GTK-Linux-64-bit-Release-GTK4-Tests/281623%40main%20%2833569%29/editing/pasteboard/data-transfer-set-data-sanitize-url-when-copying-in-null-origin-diff.txt
--- /home/buildbot/worker/GTK-Linux-64-bit-Release-GTK4-Tests/build/layout-test-results/editing/pasteboard/data-transfer-set-data-sanitize-url-when-copying-in-null-origin-expected.txt +++ /home/buildbot/worker/GTK-Linux-64-bit-Release-GTK4-Tests/build/layout-test-results/editing/pasteboard/data-transfer-set-data-sanitize-url-when-copying-in-null-origin-actual.txt @@ -12,8 +12,8 @@ PASS event.clipboardData.getData("url") is "
http://webkit.org/b/%F0%9F%A4%94?x=8%20+%206%3C
" PASS event.clipboardData.types.includes("text/uri-list") is true PASS event.clipboardData.types.includes("text/html") is true -PASS JSON.stringify(pastedItems[0]) is "{\"kind\":\"string\",\"type\":\"text/uri-list\"}" -PASS JSON.stringify(pastedItems[1]) is "{\"kind\":\"string\",\"type\":\"text/html\"}" +FAIL JSON.stringify(pastedItems[0]) should be {"kind":"string","type":"text/uri-list"}. Was {"kind":"string","type":"text/html"}. +FAIL JSON.stringify(pastedItems[1]) should be {"kind":"string","type":"text/html"}. Was {"kind":"string","type":"text/uri-list"}. PASS successfullyParsed is true TEST COMPLETE
Attachments
Add attachment
proposed patch, testcase, etc.
Diego Pino
Comment 1
2026-09-10 22:29:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/73740
EWS
Comment 2
2026-09-11 01:44:22 PDT
Committed
320913@main
(1c42b8bdd017): <
https://commits.webkit.org/320913@main
> Reviewed commits have been landed. Closing PR #73740 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug