[GTK4] editing/pasteboard/data-transfer-set-data-sanitize-url-when-copying-in-null-origin.html is failing https://bugs.webkit.org/show_bug.cgi?id=277401

Reviewed by Carlos Garcia Campos.

The test was passing on GTK3 but failing on GTK4. The text expectations
diff shown the regression was caused by a different order evaluation of
code blocks 'selectionData.hasURIList()' and 'selectionData.hasMarkup()'.

Swap order to match GTK3 'Clipboard:write' implementation.

* Source/WebKit/UIProcess/gtk/ClipboardGtk4.cpp:
(WebKit::Clipboard::write):

Canonical link: https://commits.webkit.org/320913@main