Source/WebKit/UIProcess/gtk/ClipboardGtk4.cpp
@@ -254,16 +254,17 @@ void Clipboard::readURL(CompletionHandler<void(String&& url, String&& title)>&& 
 void Clipboard::write(WebCore::SelectionData&& selectionData, CompletionHandler<void(int64_t)>&& completionHandler)
 {
     Vector<GdkContentProvider*> providers;
-    if (selectionData.hasMarkup()) {
-        auto markup = selectionData.markup().utf8();
-        GRefPtr<GBytes> bytes = adoptGRef(g_bytes_new(markup.legacyCStringPointer(), markup.length()));
-        providers.append(gdk_content_provider_new_for_bytes("text/html", bytes.get()));
-    }
 
     if (selectionData.hasURIList()) {
         auto uriList = selectionData.uriList().utf8();
         GRefPtr<GBytes> bytes = adoptGRef(g_bytes_new(uriList.legacyCStringPointer(), uriList.length()));
         providers.append(gdk_content_provider_new_for_bytes("text/uri-list", bytes.get()));
+    }
+
+    if (selectionData.hasMarkup()) {
+        auto markup = selectionData.markup().utf8();
+        GRefPtr<GBytes> bytes = adoptGRef(g_bytes_new(markup.legacyCStringPointer(), markup.length()));
+        providers.append(gdk_content_provider_new_for_bytes("text/html", bytes.get()));
     }
 
     if (selectionData.hasImage()) {
